# sharp-osrm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Sharposrm.sln  THIRD-PARTY-NOTICES.txt  conanfile.py
.github/workflows/: build.yml
cmake/: FindLibOSRM.cmake
docs/: TESTING-AND-CI.md
scripts/: test-integration-local.sh  verify-build.sh
src/Native/: sharposrm_bridge.cpp  sharposrm_bridge.h
src/Sharposrm/: Algorithm.cs  ApproachType.cs  Bearing.cs  EngineConfig.cs  OsrmEngine.cs  OsrmException.cs  Sharposrm.csproj  SnappingType.cs
src/Sharposrm/Interop/: NativeContractorConfig.cs  NativeCustomizerConfig.cs  NativeEngineConfig.cs  NativeExtractorConfig.cs  NativeMatchParams.cs  NativeMethods.cs  NativeNearestParams.cs  NativePartitionerConfig.cs  NativeRouteParams.cs  NativeTableParams.cs  NativeTileParams.cs  NativeTripParams.cs  OsrmHandle.cs
src/Sharposrm/Match/: MatchEnums.cs  MatchParameters.cs  MatchResponse.cs  Matching.cs  Tracepoint.cs
src/Sharposrm/Nearest/: NearestParameters.cs  NearestResponse.cs  NearestWaypoint.cs
src/Sharposrm/Pipeline/: ContractorConfig.cs  CustomizerConfig.cs  ExtractorConfig.cs  NativePipelineConfigScope.cs  OsrmPipeline.cs  PartitionerConfig.cs
src/Sharposrm/Route/: AnnotationMetadata.cs  Intersection.cs  Lane.cs  LegAnnotation.cs  Route.cs  RouteEnums.cs  RouteGeometry.cs  RouteLeg.cs  RouteParameters.cs  RouteResponse.cs  RouteStep.cs  StepManeuver.cs  Waypoint.cs
src/Sharposrm/Table/: TableEnums.cs  TableParameters.cs  TableResponse.cs  TableWaypoint.cs
src/Sharposrm/Tile/: TileParameters.cs
src/Sharposrm/Trip/: TripEnums.cs  TripParameters.cs  TripResponse.cs  TripWaypoint.cs
test/Sharposrm.IntegrationTests/: NuGet.Config  NuGetPackageTests.cs  Sharposrm.IntegrationTests.csproj
test/Sharposrm.Tests/: ApproachesExcludeSnappingTests.cs  ConcurrencyThrottleTests.cs  EngineLifecycleTests.cs  FlatbufferServiceTests.cs  MatchServiceTests.cs  NearestServiceTests.cs  PipelineConfigTests.cs  PipelineTests.cs  ResponseDeserializationTests.cs  RouteServiceTests.cs  Sharposrm.Tests.csproj  TableServiceTests.cs  TileServiceTests.cs  TripServiceTests.cs
test/Sharposrm.Tests/Fixtures/: MonacoDataFixture.cs  MonacoFixtureCollection.cs
